--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,16 @@ div {
     list-style: square;
   }
 }
+
+.navbar-header {
+  
+  margin-left:5px;
+}
+.navbar-brand{
+  color: white !important;
+  border-radius: 7px !important;
+  background-color: black;
+  padding-left:5px;
+  padding-right:5px;
+
+}
