--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,19 @@
 </head>
 <body>
 
+<div class="navbar navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    
+    <h1><a class="navbar-brand" href="#">The Forum App</a></h1>
+  </div>
+</div>
+
+
 <div class = "container">
-	<%= yield %>
+	<div class="row"></div>
+	<div class = "span9"><%= yield %></div>
+	<div class="span3"></div>
 </div>
 
 
