--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,29 +1,26 @@
-<%= form_for(@topic) do |f| %>
-  <% if @topic.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@topic.errors.count, "error") %> prohibited this topic from being saved:</h2>
-
-      <ul>
-      <% @topic.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @topic, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :topic_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :topic_name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :topic_content, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :topic_content, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :topic_author, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :topic_author, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :topic_name %><br />
-    <%= f.text_field :topic_name %>
-  </div>
-  <div class="field">
-    <%= f.label :topic_content %><br />
-    <%= f.text_area :topic_content %>
-  </div>
-  <div class="field">
-    <%= f.label :topic_author %><br />
-    <%= f.text_field :topic_author %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                topics_path, :class => 'btn' %>
   </div>
 <% end %>
