--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,27 +1,42 @@
-<h1>Forum Home</h1>
+<%- model_class = Topic -%>
+<div class="page-header">
+  <h3>Home</h3> <!--<%=t '.title', :default => model_class.model_name.human.pluralize.titleize %>-->
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      
+      <th><%= model_class.human_attribute_name(:topic_name) %></th>
+      
+      <th><%= model_class.human_attribute_name(:topic_author) %></th>
+      
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @topics.each do |topic| %>
+      <tr>
+        <td><%= link_to topic.topic_name, topic_path(topic) %></td>
+        
+        
+        <td><%= topic.topic_author %></td>
 
-<table>
-  <tr>
-    <th>Topic name</th>
-    <th>Topic content</th>
-    <th>Topic author</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @topics.each do |topic| %>
-  <tr>
-    <td><%= topic.topic_name %></td>
-    <!-- <td><%= topic.topic_content %></td> -->
-    <td><%= topic.topic_author %></td>
-    <td><%= link_to 'Show', topic %></td>
-    <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-    <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_topic_path(topic), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      topic_path(topic),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_topic_path,
+            :class => 'btn btn-primary' %>
 
-<%= link_to 'New Topic', new_topic_path %>
+
